# nu_plugin_wifiscan

./: Cargo.toml  README.md
src/: main.rs
